<resources>
    <string name="app_name">NICFLIKS</string>
    <string name="log_in">Log In</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">login</string>
    <string name="enter_password">Enter Password</string>
    <string name="error_in_log_in">Error in Log In</string>
    <string name="submit">submit</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="loginnow">LOG IN NOW!</string>
    <string name="registration">registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="error_in_logging_in">Error In Logging In</string>
    <string name="click_here_to_log_in">Click Here To Log In</string>
    <string name="registrations">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="fetch_user">Fetch User</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_subscription_type">Enter Subscription Type</string>
    <string name="error_in_logging_ins">Error In Logging In</string>
    <string name="click_here_to_log_ins">Click Here to Log In</string>
    <string name="registrationz">Registration</string>
    <string name="enter_subscription_types">Enter Subscription Type</string>
    <string name="enter_payment_methods">Enter Payment Method</string>
    <string name="passwords">password</string>
    <string name="passwordz">Password</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="log_ind">Log In</string>
    <string name="registerd">Register</string>
</resources>