<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/purplereg"
    android:orientation="vertical"
    android:gravity="center">



        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#C1C1C1"
            android:textSize="20sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#C1C1C1"
            android:textSize="20sp"
            android:text="@string/email" />

        <TextView
            android:visibility="gone"
            android:id="@+id/fetchResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#FFE6CFFF"
            android:textSize="20sp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#C1C1C1"
            android:textSize="20sp"
            android:hint="@string/passwordz" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <Button
                    android:id="@+id/update"
                    android:text="@string/update"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#D56AD3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/fetchProfile"
                    android:text="@string/fetch_user"
                    android:backgroundTint="#D56AD3"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/delete"
                    android:text="@string/delete"
                    android:backgroundTint="#D56AD3"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>




        <Button
            android:id="@+id/logout"
            android:text="@string/log_out"
            android:backgroundTint="#D56AD3"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



</LinearLayout>

