<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/purple"
    tools:context=".logins">




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:id="@+id/email"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="220dp"
                android:hint="@string/enter_email"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/password"
                android:hint="@string/enter_password"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error"
            android:layout_marginBottom="20dp"
            android:text="@string/error_in_log_in"
            android:textColor="#AE0000"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>
        <Button
            android:id="@+id/submit"
            android:text="@string/log_ind"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:backgroundTint="#D56AD3"
            android:layout_height="wrap_content">


        </Button>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/registerNow"
            android:layout_marginBottom="20dp"
            android:text="@string/click_here_to_register"
            android:layout_marginTop="65dp"
            android:padding="20dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>


</LinearLayout>